# xmonad-flake

./: .gitignore  .gitmodules  README.md  flake.nix  hie.yaml  shell.nix
config/x11/: xinitrc
config/xpm/: haskell.xpm  layout-full.xpm  layout-hack.xpm  xmonad.xpm
nix/: module.nix  overlay.nix  wm-service.nix
src/: Xmonad.hs
src/Config/: Alias.hs  Hosts.hs  Prompts.hs
src/Hosts/: Helpers.hs  Milivoj.hs
src/Theme/: Xprop.hs
src/XMonad/Actions/: PerProfileWindows.hs  Profiles.hs
xmobar/: Main.hs  cabal.project  hie.yaml  mzanic-xmobar.cabal
xmobar/src/: Bar.hs
xmobar/src/Config/: BarConfig.hs  Helpers.hs  Widgets.hs
xmobar/src/Hosts/: Ilija.hs  Milivoj.hs  Mzanic.hs
xmonad/: Main.hs  hie.yaml  mzanic-xmonad.cabal
xmonad/src/: Exe.hs  Xmonad.hs
xmonad/src/Config/: Alias.hs  Bar.hs  Hosts.hs  Keys.hs  Prompts.hs
xmonad/src/Hooks/: HandleEventHook.hs  LayoutHook.hs  ManageHook.hs  RescreenHook.hs  StartupHook.hs
xmonad/src/Hosts/: Default.hs  Helpers.hs  Ilija.hs  Mzanic.hs
xmonad/src/Workspaces/: Profile.hs  Scratchpad.hs  Topics.hs
xmonad/src/XMonad/Actions/: ProfileWindows.hs  Profiles.hs
xmonad/src/XMonad/Layout/: PerProfileWindows.hs
xmonad/src/XMonad/Util/: DebugWindow.hs  PTL.hs  UserConf.hs
xpm/: layout-tiled.xpm
